corpus/baselines/conformance/salsa/assignmentToVoidZero2.errors.txt
assignmentToVoidZero2.js(2,1): error TS7008: Member 'k' implicitly has an 'any' type.
assignmentToVoidZero2.js(5,1): error TS7008: Member 'y' implicitly has an 'any' type.
assignmentToVoidZero2.js(9,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
assignmentToVoidZero2.js(10,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
assignmentToVoidZero2.js(12,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== assignmentToVoidZero2.js (5 errors) ====
    exports.j = 1;
    exports.k = void 0;
    ~~~~~~~~~~~~~~~~~~
!!! error TS7008: Member 'k' implicitly has an 'any' type.
    var o = {}
    o.x = 1
    o.y = void 0
    ~~~~~~~~~~~~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    o.x + o.y
    
    function C() {
        this.p = 1
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        this.q = void 0
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    var c = new C()
            ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    c.p + c.q
    
==== importer.js (0 errors) ====
    import { j, k } from './assignmentToVoidZero2'
    j + k
    